--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						data-scrollax-parent="true">
 
 						<div class="one-third js-fullheight order-md-last video-bg">
-							<img src="./images/codea.jpg" alt="Background" class="bg-video" />
+							<img src="./images/code.jpg" alt="Background" class="bg-video" />
 							<div class="overlay"></div>
 						</div>
 
